<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/golden_temple" />

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start"
            android:background="#D65A00">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gurbani_video"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardKirtan"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#D65A00"
                        android:elevation="5dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/img_design" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-130dp"
                                android:text="@string/gurbani_kirtan"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardKatha"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/img_design"
                        android:backgroundTint="#D65A00"
                        android:elevation="5dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/img_design"
                                app:tint="@color/white" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-130dp"
                                android:text="@string/katha_vichar"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/hukumnama"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#D65A00"
                        android:elevation="5dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/img_design" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-130dp"
                                android:text="@string/hukumnama"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMoreApps"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#D65A00"
                        android:elevation="5dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/img_design" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-130dp"
                                android:text="@string/more_apps"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewShare"
                        android:layout_width="190dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#D65A00"
                        android:elevation="5dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/img_design" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-130dp"
                                android:text="@string/share"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

</layout>